# graph-agent-folio

./: .env.example  .gitignore  Dockerfile  README.md  STREAMING_PORTFOLIO.md  docker-compose.yml  fly.toml  langgraph.json
agent/: linkedin_data.json  portfolio_graph.py  pyproject.toml
backend/: __init__.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: linkedin_data.json  portfolio_graph.py  tools.py
backend/app/agent/schemas/: about_dict.py  custom_chunks.py  experience_dict.py  linkedin_profile_models.py  project_dict.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: PortfolioWorkflow.tsx  ProjectCard.tsx  TopBar.tsx  WorkflowNode.tsx
frontend/src/components/sections/: AboutSection.tsx  ContactSection.tsx  ExperienceSection.tsx  ProjectsSection.tsx  SkillsSection.tsx  StartSection.tsx
frontend/src/components/ui/: splite.tsx
frontend/src/context/: PortfolioContext.tsx
frontend/src/data/: aboutData.ts  experiencesData.ts  projectsData.ts
frontend/src/hooks/: usePortfolioStream.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: about.ts  experience.ts  project.ts  spline.d.ts
src/: index.css
src/components/: CustomEdge.tsx  PortfolioWorkflow.tsx  Sidebar.tsx  TopBar.tsx  WorkflowNode.tsx
src/components/sections/: AboutSection.tsx  ExperienceSection.tsx  ProjectsSection.tsx
src/hooks/: useTheme.tsx
src/pages/: Index.tsx
